# md2ti84

./: .gitignore  README.md  pyproject.toml
md2ti84/: __init__.py  calc_exporter.py  cli.py  compiler.py  hdpic_exporter.py  image_converter.py  latex_builder.py  paginator.py  parser.py  progress.py  renderer.py
templates/: base.tex.jinja2
tests/fixtures/: sample.md
