[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2ti84"
version = "0.1.0"
description = "Convert Markdown notes to TI-84 CE calculator images"
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "jinja2>=3.1",
    "pdf2image>=1.16",
    "Pillow>=10.0",
    "imagequant>=1.1",
    "zx0>=2.2",
    "rich>=13.0",
]

[project.scripts]
md2ti84 = "md2ti84.cli:main"

[tool.md2ti84]
# Target resolution — TI-84 CE native screen
image_width = 320
image_height = 240
# LaTeX font size in pt
font_size = 8
# Page margin in pt
margin = 6
# PDF render DPI before downscaling
render_dpi = 300
# LaTeX engine: "lualatex" or "pdflatex"
latex_engine = "lualatex"
# Estimated max lines per page (tune this empirically)
max_lines_per_page = 24
# Grayscale by default (crisper text, smaller files)
grayscale = true
